--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
             <!-- Сортировка -->
 
             <!-- Контент -->
+            <ul class="trip-days"></ul>
           </section>
       </div>
     </main>
