--- a/public/index.html
+++ b/public/index.html
@@ -71,11 +71,11 @@
       navigator.serviceWorker.register('./sw.js')
         .then(function(reg) {
         // регистрация сработала.
-        console.log('~~~ Registration succeeded! Scope is ' + reg.scope);
+        console.log('Registration succeeded! Scope is ' + reg.scope);
         })
         .catch(function(error) {
           // регистрация прошла неудачно.
-          console.log('~~~ Registration failed with: ' + error);
+          console.log('Registration failed with: ' + error);
         });
     </script>
 
